注释和优化

--- a/src/assets/styles/global.styl
+++ b/src/assets/styles/global.styl
@@ -6,6 +6,8 @@ html, body{
 }
 body{
   background-image: url('../images/bg.jpeg')
+
+  // 将背景图片等比缩放到完全覆盖容器, 有可能超出容器
   background-size: cover
   background-position: center;
   font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
