--- a/server/server.template.ejs
+++ b/server/server.template.ejs
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <script src="https://cdn.bootcss.com/vuex/3.0.1/vuex.min.js"></script>
   <%- style %>
 </head>
 <body>
