--- a/client/assets/styles/global.styl
+++ b/client/assets/styles/global.styl
@@ -1,10 +1,10 @@
-html, body{
+html, body {
   margin 0
   padding 0
   width 100%
   height 100%
 }
-body{
+body {
   background-image: url('../images/bg.jpeg')
 
   // 将背景图片等比缩放到完全覆盖容器, 有可能超出容器
@@ -14,4 +14,11 @@ body{
   color: #4d4d4d;
   font-smoothing: antialiased;
   font-weight: 300;
+}
+
+.fade-enter-active, .fade-leave-active {
+  transition: opacity .5s;
+}
+.fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
+  opacity: 0;
 }
